Minor Flag Fixes, Added KAL

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2474,6 +2474,31 @@
  IRE_ds_ADJ:0 "Irish"
  IRE_cn_ADJ:0 "Irish"
  IRE_an_ADJ:0 "Irish"
+
+ KAL_ni:0 "Kalimantan Sultanate"
+ KAL_ni_DEF:0 "Kalimantan Sultanate"
+ KAL_ds:0 "Kalimantan Sultanate"
+ KAL_ds_DEF:0 "Kalimantan Sultanate"
+ KAL_rc:0 "Kalimantan Sultanate"
+ KAL_rc_DEF:0 "Kalimantan Sultanate"
+ KAL_an:0 "Kalimantan Sultanate"
+ KAL_an_DEF:0 "Kalimantan Sultanate"
+ KAL_cn:0 "Kalimantan Sultanate"
+ KAL_cn_DEF:0 "Kalimantan Sultanate"
+ KAL_lb:0 "Kalimantan Sultanate"
+ KAL_lb_DEF:0 "Kalimantan Sultanate"
+ KAL_ss:0 "Kalimantan Sultanate"
+ KAL_ss_DEF:0 "Kalimantan Sultanate"
+ KAL_jc:0 "Kalimantan Sultanate"
+ KAL_jc_DEF:0 "Kalimantan Sultanate"
+ KAL_ni_ADJ:0 "Indonesian"
+ KAL_rc_ADJ:0 "Indonesian"
+ KAL_lb_ADJ:0 "Indonesian"
+ KAL_ss_ADJ:0 "Indonesian"
+ KAL_jc_ADJ:0 "Indonesian"
+ KAL_ds_ADJ:0 "Indonesian"
+ KAL_cn_ADJ:0 "Indonesian"
+ KAL_an_ADJ:0 "Indonesian"
 ###################################
 # TEMPLATE
 ###################################
