--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2499,6 +2499,32 @@
  KAL_ds_ADJ:0 "Indonesian"
  KAL_cn_ADJ:0 "Indonesian"
  KAL_an_ADJ:0 "Indonesian"
+
+ OMA_ni:0 "Oman"
+ OMA_ni_DEF:0 "Oman"
+ OMA_rc:0 "Oman"
+ OMA_rc_DEF:0 "Oman"
+ OMA_lb:0 "Oman"
+ OMA_lb_DEF:0 "Oman"
+ OMA_ss:0 "Oman"
+ OMA_ss_DEF:0 "Oman"
+ OMA_jc:0 "Oman"
+ OMA_jc_DEF:0 "Oman"
+ OMA_an:0 "Oman "
+ OMA_an_DEF:0 "Oman"
+ OMA_ds:0 "Oman"
+ OMA_ds_DEF:0 "Oman"
+ OMA_cn:0 "Oman"
+ OMA_cn_DEF:0 "Omani"
+ OMA_ni_ADJ:0 "Omani"
+ OMA_rc_ADJ:0 "Omani"
+ OMA_lb_ADJ:0 "Omani"
+ OMA_ss_ADJ:0 "Omani"
+ OMA_jc_ADJ:0 "Omani"
+ OMA_ds_ADJ:0 "Omani"
+ OMA_cn_ADJ:0 "Omani"
+ OMA_an_ADJ:0 "Omani"
+ 
 ###################################
 # TEMPLATE
 ###################################
