--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2749,6 +2749,31 @@
  NZL_ds_ADJ:0 "Maori"
  NZL_cn_ADJ:0 "Maori"
  NZL_an_ADJ:0 "Maori"
+
+ MIS_ni:0 "Miskito Kingdom"
+ MIS_ni_DEF:0 "the Miskito Kingdom"
+ MIS_rc:0 "Miskito Kingdom"
+ MIS_rc_DEF:0 "the Miskito Kingdom"
+ MIS_lb:0 "Miskito Kingdom"
+ MIS_lb_DEF:0 "the Miskito Kingdom"
+ MIS_ss:0 "Miskito Kingdom"
+ MIS_ss_DEF:0 "the Miskito Kingdom"
+ MIS_jc:0 "Miskito Kingdom"
+ MIS_jc_DEF:0 "the Miskito Kingdom"
+ MIS_an:0 "Miskito Kingdom"
+ MIS_an_DEF:0 "the Miskito Kingdom"
+ MIS_ds:0 "Miskito Kingdom"
+ MIS_ds_DEF:0 "the Miskito Kingdom"
+ MIS_cn:0 "Miskito Kingdom"
+ MIS_cn_DEF:0 "Miskito"
+ MIS_ni_ADJ:0 "Miskito"
+ MIS_rc_ADJ:0 "Miskito"
+ MIS_lb_ADJ:0 "Miskito"
+ MIS_ss_ADJ:0 "Miskito"
+ MIS_jc_ADJ:0 "Miskito"
+ MIS_ds_ADJ:0 "Miskito"
+ MIS_cn_ADJ:0 "Miskito"
+ MIS_an_ADJ:0 "Miskito"
  
 ###################################
 # TEMPLATE
