--- a/localisation/politics_l_english.yml
+++ b/localisation/politics_l_english.yml
@@ -61,9 +61,12 @@
  POLITICS_EXPIRE_TIME:0 "Expires after: $TIME|Y$ days."
  POLITICS_SUCCESS_PROGRESS:0 "Goal success at: $PROGRESS|Y%0$"
  POLITICAL_POLITICAL:0 "Political"
- MANAGE_OCCUPIED_TERRITORIES:1 "Manage occupied territories"
+ MANAGE_OCCUPIED_TERRITORIES:1 "Manage Occupations"
  MANAGE_SUBJECTS:0 "Manage subjects"
  MANAGE_OCCUPIED_TERRITORIES_HEADER:0 "Foreign Territory"
+ MANAGE_OCCUPIED_TERRITORIES_HEADER:0 "Foreign Territory"
+ MANAGE_EXILED_GOVERNMENTS:0 "Exiled Governments"
+ SHOW_EXILED_STATUS:0 "Exiled Status"
  POLITICAL_RESEARCH_BONUS_ENTRY:1 "$CATEGORY$: $FACTOR|=-0%$"
  POLITICAL_EQUIPMENT_TYPE_BONUS_ENTRY:0 "$ARCHETYPE$:"
  IDEA_SUB_CATEGORY_LIMIT:0 "§YMay only have one§!"
