--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -632,3 +632,5 @@
  VICTORY_POINTS_1644:0 "Somerset"
  VICTORY_POINTS_8243:0 "Albany"
  VICTORY_POINTS_12715:0 "Mérida"
+ VICTORY_POINTS_13207:0 "Bragman's Bluff"
+ VICTORY_POINTS_13208:0 "Bluefields"
