Brittany and Lorraine DMZ
Added Brittany and Demilitarized Lorraine. Also fixed the alerts.gui and the country name template.

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2774,26 +2774,51 @@
  MIS_ds_ADJ:0 "Miskito"
  MIS_cn_ADJ:0 "Miskito"
  MIS_an_ADJ:0 "Miskito"
+
+ BRT_ni:0 "Brittany"
+ BRT_ni_DEF:0 "Brittany"
+ BRT_ds:0 "Brittany"
+ BRT_ds_DEF:0 "Brittany"
+ BRT_rc:0 "Brittany"
+ BRT_rc_DEF:0 "Brittany"
+ BRT_an:0 "Brittany"
+ BRT_an_DEF:0 "Brittany"
+ BRT_cn:0 "Brittany"
+ BRT_cn_DEF:0 "Breton"
+ BRT_lb:0 "Brittany"
+ BRT_lb_DEF:0 "Brittany"
+ BRT_ss:0 "Brittany"
+ BRT_ss_DEF:0 "Brittany"
+ BRT_jc:0 "Breton People's Republic"
+ BRT_jc_DEF:0 "Breton People's Republic"
+ BRT_ni_ADJ:0 "Breton"
+ BRT_rc_ADJ:0 "Breton"
+ BRT_lb_ADJ:0 "Breton"
+ BRT_ss_ADJ:0 "Breton"
+ BRT_jc_ADJ:0 "Breton"
+ BRT_ds_ADJ:0 "Breton"
+ BRT_cn_ADJ:0 "Breton"
+ BRT_an_ADJ:0 "Breton"
  
 ###################################
 # TEMPLATE
 ###################################
  TEMPLATE_ni:0 "COUNTRY NAME"
  TEMPLATE_ni_DEF:0 "COUNTRY NAME"
+ TEMPLATE_ds:0 "COUNTRY NAME"
+ TEMPLATE_ds_DEF:0 "COUNTRY NAME"
  TEMPLATE_rc:0 "COUNTRY NAME"
  TEMPLATE_rc_DEF:0 "COUNTRY NAME"
+ TEMPLATE_an:0 "COUNTRY NAME"
+ TEMPLATE_an_DEF:0 "COUNTRY NAME"
+ TEMPLATE_cn:0 "COUNTRY NAME"
+ TEMPLATE_cn_DEF:0 "ADJECTIVE"
  TEMPLATE_lb:0 "COUNTRY NAME"
  TEMPLATE_lb_DEF:0 "COUNTRY NAME"
  TEMPLATE_ss:0 "COUNTRY NAME"
  TEMPLATE_ss_DEF:0 "COUNTRY NAME"
  TEMPLATE_jc:0 "COUNTRY NAME"
  TEMPLATE_jc_DEF:0 "COUNTRY NAME"
- TEMPLATE_an:0 "COUNTRY NAME"
- TEMPLATE_an_DEF:0 "COUNTRY NAME"
- TEMPLATE_ds:0 "COUNTRY NAME"
- TEMPLATE_ds_DEF:0 "COUNTRY NAME"
- TEMPLATE_cn:0 "COUNTRY NAME"
- TEMPLATE_cn_DEF:0 "ADJECTIVE"
  TEMPLATE_ni_ADJ:0 "ADJECTIVE"
  TEMPLATE_rc_ADJ:0 "ADJECTIVE"
  TEMPLATE_lb_ADJ:0 "ADJECTIVE"
