Los Altos and Guatemala

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -776,7 +776,7 @@
  STATE_775:0 "B.E.T."
  STATE_776:0 "Dahomey"
  STATE_777:0 "Togo"
- STATE_778:0 "Upper Volta"
+ STATE_778:0 "Los Altos"
  STATE_779:0 "Honduran Miskito"
  STATE_780:0 "Miskito Coast"
  STATE_781:0 "Niger"
