American Staring Ideas, etc.

--- a/localisation/Super_Events_l_english.yml
+++ b/localisation/Super_Events_l_english.yml
@@ -11,3 +11,5 @@
   SPEVNT_Anglo_Indian_War_TEXT:0 "The rescue of India from ages of barbarism and tyranny shall constitute the finest achievement of our history. \n §Y-Winston Churchill-§!"
   SPEVNT_China_Unified_Auth_Beiyang:0 "China Reunified"
   SPEVNT_China_Unified_Auth_Beiyang_TEXT:0 "Our God is none other than the masses of the Chinese people. \n §Y-Li Lisan-§!"
+  SPEVNT_Wuchang_Revolution:0 "The Chinese Revolution"
+  SPEVNT_Wuchang_Revolution_TEXT:0 "There is great chaos under heaven; the situation is excellent. \n §Y-Mao Tse-tung-§!"
