--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -145,7 +145,7 @@
  STATE_144:0 "Nord-Norge"
  STATE_145:0 "Aland"
  STATE_146:0 "Karjala"
- STATE_147:0 "Salla"
+ STATE_147:0 "Bay Islands"
  STATE_148:0 "Lappi"
  STATE_149:0 "Pohjanmaa"
  STATE_150:0 "Savo"
