--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -309,7 +309,7 @@
  STATE_308:0 "Leeward Islands"
  STATE_309:0 "Suriname"
  STATE_310:0 "French Guiana"
- STATE_311:0 "British Mexico"
+ STATE_311:0 "British Honduras"
  STATE_312:0 "Honduras"
  STATE_313:0 "Guatemala"
  STATE_314:0 "El Salvador"
@@ -823,4 +823,3 @@
  STATE_822:0 "Canakkale"
  STATE_823:0 "Aydin"
  STATE_824:0 "Danish Antilles"
- STATE_824:0 "Chadian Desert"
