More Generic Focus Icons & Britain Work
Added more generic focus icons of both my and Indy's creation

Whig and Torie Political focuses set up

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -21,10 +21,29 @@
   PB_ENG_Encourage_Cooperatives:0 "Encourage Cooperatives"
   PB_ENG_Social_Services:0 "Expand Social Services"
   PB_ENG_Nationalize_Imperial_Companies:0 "Nationalize Imperial Companies"
+  PB_ENG_Workers_Rights_Act:0 "The Worker's Rights Act"
+  PB_ENG_Public_Works:0 "Public Projects Planning"
+  PB_ENG_Progressive_Taxes:0 "Progressive Tax Plan"
 
   PB_ENG_Liberal_Victory:0 "Whig Victory"
+  PB_ENG_Limited_Interventionism:0 "Limited Interventionism"
+  PB_ENG_Working_Women:0 "Women in the Workplace"
+  PB_Imperial_Assistance_Committee:0 "Imperial Assistance Committee"
+  PB_ENG_Education_Reform:0 "Education Reform"
+  PB_ENG_Ethnic_Rights:0 "Expand Ethnic Rights"
+  PB_ENG_Reaffirm_Constitutionalism:0 "Reaffirm Constitutionalism"
+  PB_ENG_Pursue_Desegregation:0 "Pursue Desegregation"
+  PB_ENG_Beacon_of_Democracy:0 "Give us your tired, your poor..."
 
   PB_ENG_Conservative_Victory:0 "Tory Victory"
+  PB_ENG_Family_Values:0 "Family Values"
+  PB_ENG_Private_Sector:0 "Encourage the Private Sector"
+  PB_ENG_Protectionism:0 "Protectionism"
+  PB_ENG_Imperial_Investments:0 "Invest in the Confederation"
+  PB_ENG_Reduce_Corporate_Taxes:0 "Slash Corporate Taxes"
+  PB_ENG_Great_Chain:0 "The Great Chain of Industry"
+  PB_ENG_Slash_Budget:0 "Slash the Budgets"
+  PB_ENG_Expand_Domestic_Oil:0 "Expand Domestic Oil"
 
   PB_ENG_Reactionary_Victory:0 "NPP Victory"
 
