ネーデルラント連邦共和国「君主」フォカス木

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -225,20 +225,20 @@
  POR_cn_ADJ:0 "Portuguese"
  POR_an_ADJ:0 "Portuguese"
 
- HOL_ni:0 "United Provinces"
- HOL_ni_DEF:0 "United Provinces"
- HOL_ds:0 "United Provinces"
- HOL_ds_DEF:0 "United Provinces"
- HOL_rc:0 "United Provinces"
- HOL_rc_DEF:0 "United Provinces"
- HOL_an:0 "United Provinces "
- HOL_an_DEF:0 "United Provinces"
- HOL_cn:0 "United Provinces"
- HOL_cn_DEF:0 "United Provinces"
- HOL_lb:0 "United Provinces"
- HOL_lb_DEF:0 "United Provinces"
- HOL_ss:0 "United Provinces"
- HOL_ss_DEF:0 "United Provinces"
+ HOL_ni:0 "Dutch Republic"
+ HOL_ni_DEF:0 "the Dutch Republic"
+ HOL_ds:0 "Dutch Republic"
+ HOL_ds_DEF:0 "the Dutch Republic"
+ HOL_rc:0 "Dutch Republic"
+ HOL_rc_DEF:0 "the Dutch Republic"
+ HOL_an:0 "Dutch Republic"
+ HOL_an_DEF:0 "the Dutch Republic"
+ HOL_cn:0 "Dutch Republic"
+ HOL_cn_DEF:0 "the Dutch Republic"
+ HOL_lb:0 "Dutch Republic"
+ HOL_lb_DEF:0 "the Dutch Republic"
+ HOL_ss:0 "Dutch Republic"
+ HOL_ss_DEF:0 "the Dutch Republic"
  HOL_jc:0 "Dutch People's Republic"
  HOL_jc_DEF:0 "Dutch People's Republic"
  HOL_ni_ADJ:0 "Dutch"
@@ -399,7 +399,7 @@
  SCS_ds_ADJ:0 "Dinaric"
  SCS_cn_ADJ:0 "Dinaric"
  SCS_an_ADJ:0 "Dinaric"
- 
+
  HUN_ni:0 "Hungary"
  HUN_ni_DEF:0 "Hungary"
  HUN_ds:0 "Hungary"
@@ -1899,7 +1899,7 @@
  LAK_ds_ADJ:0 "Native American"
  LAK_cn_ADJ:0 "Native American"
  LAK_an_ADJ:0 "Native American"
- 
+
  QUE_ni:0 "Commonwealth of Quebec"
  QUE_ni_DEF:0 "Commonwealth of Quebec"
  QUE_ds:0 "Commonwealth of Quebec"
@@ -2849,7 +2849,7 @@
  BDT_ds_ADJ:0 "Bandit"
  BDT_cn_ADJ:0 "Bandit"
  BDT_an_ADJ:0 "Bandit"
- 
+
  ANH_ni:0 "Anhui Clique"
  ANH_ni_DEF:0 "Anhui Clique"
  ANH_ds:0 "Anhui Clique"
