More British Focus Tree Work

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -46,8 +46,47 @@
   PB_ENG_Expand_Domestic_Oil:0 "Expand Domestic Oil"
 
   PB_ENG_Reactionary_Victory:0 "NPP Victory"
+  PB_ENG_Mental_Hygiene_Act:0 "The Mental Hygiene Act"
+  PB_ENG_New_Nationalism:0 "New British Nationalism"
+  PB_ENG_Imperial_Corporatism:0 "Imperial Corporatism"
+  PB_ENG_Militarized_Police:0 "Militarize the Bobbies"
+  PB_ENG_Church_and_State:0 "Church and State"
+  PB_ENG_Approach_King:0 "Approach the King"
+  PB_ENG_Paramilitarism:0 "Integrate the Paramilitaries"
+  PB_ENG_British_Emperor:0 "An Emperor of our Own"
+  PB_ENG_Aristocratic_Support:0 "Empower the Aristocracy"
 
   PB_ENG_Path_to_Recovery:0 "Back to the Top"
+  PB_ENG_Increase_Public_Spending:0 "Increase Public Spending"
+  PB_ENG_Nationalization:0 "Nationalize Vital Industries"
+  PB_ENG_NHS:0 "National Health Commission"
+  PB_ENG_Welfare_State:0 "A Welfare State"
+
+  PB_ENG_Tackle_Homelessness:0 "The War on Homelessness"
+  PB_ENG_Tackle_Unemployment:0 "A Helping Hand"
+
+  PB_ENG_Company_Bailout:0 "Heavy Industry Bailout"
+  PB_ENG_Guide_Relief_Efforts:0 "Guide the Relief Effort"
+  PB_ENG_Abandon_Gold_Standard:0 "Abandon the Gold Standard"
+
+  PB_ENG_Restore_Confidence:0 "Restore Confidence in the Pound"
+  PB_ENG_Imperial_Bank:0 "Establish the Imperial Bank"
+
+  PB_ENG_Loosen_Regulations:0 "Loosen Regulations"
+  PB_ENG_Reinforce_Protectionism:0 "Reinforce Protectionism"
+  PB_ENG_Reform_Gold_Standard:0 "Adjust the Gold Standard"
+
+  PB_ENG_Establish_IRI:0 "Establish the IRI"
+  PB_ENG_Control_Failed_Banks:0 "Control the Failed Banks"
+
+  PB_ENG_Economic_Isolationism:0 "Economic Self Sufficiency"
+  PB_ENG_State_Capitalism:0 "State Capitalism"
+  PB_ENG_Union_Busting:0 "Break the Unions"
+  PB_ENG_Wage_Reductions:0 "Reduce Wages"
+
+  PB_ENG_Beginning_Recovery:0 "The Beginning of Recovery"
+  PB_ENG_War_on_Poverty:0 "The War on Poverty"
+  PB_ENG_War_on_Unemployment:0 "The War on Unemployment"
 
   PB_ENG_Kings_Agenda:0 "The King's Agenda"
 
