More British Focus Work

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -123,6 +123,16 @@
   PB_ENG_White_Mans_Burden:0 "White Man's Burden"
   PB_ENG_Centralization:0 "Centralization"
   PB_ENG_British_Exceptionalism:0 "British Exceptionalism"
+  PB_ENG_African_Wealth:0 "The Wealth of Africa"
+  PB_ENG_Purge_Local_Leaders:0 "Purge Local Leaders"
+  PB_ENG_Undermine_America:0 "Undermine the Americans"
+  PB_ENG_Economic_Warfare:0 "Anglo-American Trade War"
+  PB_ENG_African_Settlement:0 "British Settlement"
+  PB_ENG_Loyalist_Administrators:0 "Demand Administrator Loyalty"
+  PB_ENG_War_on_Barbarism:0 "The War on Barbarism"
+  PB_ENG_Loyalist_American_Coup:0 "Revoke the Galloway Compromise"
+  PB_ENG_Coup_Failure:0 "Defiant to the End"
+  PB_ENG_Coup_Success:0 "Their Emperor, Now and Always"
 
   PB_ENG_Englightened_Imperialism:0 "Enlightened Imperialism"
   PB_ENG_Mission_to_Civilize:0 "Mission to Civilize"
@@ -130,6 +140,8 @@
   PB_ENG_Special_Relationship:0 "The Special Relationship"
 
   PB_ENG_Balfour_Proposition:0 "Examine the Balfour Proposition"
+  PB_ENG_Future_East_Africa:0 "Reorganize East Africa"
+  PB_ENG_Reorganize_Egypt:0 "Reorganize the Egyptian Protectorate"
 
   ##########################
   # TOOLTIPS
