Grestin forgetting to send a bunch of shit to the Git because he's a moron

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -138,16 +138,46 @@
   PB_ENG_Mission_to_Civilize:0 "Mission to Civilize"
   PB_ENG_Expand_Local_Autonomy:0 "Increase Local Autonomy"
   PB_ENG_Special_Relationship:0 "The Special Relationship"
+  PB_ENG_Open_Hand:0 "An Open Hand"
+  PB_ENG_Limited_Decolonization:0 "Limited Decolonization"
+  PB_ENG_Anglo_American_Corps:0 "Joint Anglo-American Corps"
+  PB_ENG_Merchant_Shipping:0 "Merchant Shipping Corps"
+  PB_ENG_Empire_Equals:0 "An Empire of Equals"
+  PB_ENG_Starship_Troopers_Reference:0 "Service Guarantees Citizenship"
+  PB_ENG_Partners_not_Superiors:0 "Partners, not Superiors"
+  PB_ENG_Reform_Commonwealths:0 "A Federation of Nations"
 
   PB_ENG_Balfour_Proposition:0 "Examine the Balfour Proposition"
   PB_ENG_Future_East_Africa:0 "Reorganize East Africa"
   PB_ENG_Reorganize_Egypt:0 "Reorganize the Egyptian Protectorate"
+
+  PB_ENG_Rearmament:0 "Pursue Rearmament"
+  PB_ENG_Abandon_Isolationism:0 "Not So Spledid Isolationism"
+  PB_ENG_Look_East:0 "Look to the East"
+
+  PB_ENG_Look_West:0 "Look to the West"
+  PB_ENG_Mexico_Policy:0 "Re-Examine Mexican Policy"
+  PB_ENG_Reinforce_Nicaragua_Canal:0 "Reinforce the Nicaragua Canal"
+  PB_ENG_Contain_Mexico:0 "Contain Mexico"
+  PB_ENG_Support_Mexico:0 "Support Mexico"
+  PB_ENG_Contain_New_Granada:0 "Isolate Granadine Ambitions"
+  PB_ENG_Military_Mission_Argentina:0 "Military Mission to Buenos Aires"
+  PB_ENG_Approach_Tejas:0 "The Tejas Accords"
+  PB_ENG_Anglo_Mexican_Trade:0 "Anglo-Mexican Trade"
+  PB_ENG_Support_Transplatine_Alliance:0 "Support the Transplatine Alliance"
+
+  PB_ENG_Look_to_Europe:0 "Look to the Continent"
+  PB_ENG_Renew_German_Relations:0 "Renew the Imperial Powers"
+  PB_ENG_Radio_Free_Europe:0 "Radio Free Europe"
+  PB_ENG_Mutual_Defense_Policy:0 "Mutual Defense Plan"
+  PB_ENG_Support_Resistance:0 "A Rifle Behind Every Blade of Grass"
 
   ##########################
   # TOOLTIPS
   ##########################
   PB_ENG_George_Dead_tooltip:0 "§YKing George V has died§!"
   PB_ENG_1934_Congress_Commenced:0 "§YThe 1934 Imperial Confederation Congress has begun§!"
+  ENG_Great_Slump_Over_tooltip:0 "§YBritain has recovered from the Great Slump§!"
 
   ##########################
   # IDEAS
