--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -48,24 +48,58 @@
  JC_VARIANT_01:0 "Jacobinism"
  JC_VARIANT_01_desc:0 "\n Jacobinism is a school of thought that originated in the French Reformation. Originally espoused by Robespierre, modern Jacobins argue for the abolition of all hierachy, not just monarchy. Their principle concern is the creation of a direct democacy, often alongside the creation of a revolutionary vanguard to protect said democracy. In reality, however, this often leads to a far-left authoritarian government. Though progressive socially, Jacobin states are often despotic and militaristic, seeking to spread their revolution abroad. \n\n Jacobins foster their support in the poor and defenseless, seeking to galvanize them to overturn the many crowns that pepper the Earth, bringing revolution worldwide."
 
+ ENG_jc_party:0 "BRF"
+ ENG_jc_party_long:0 "British Republican Front"
+ ENG_ss_party:0 "WUP"
+ ENG_ss_party_long:0 "Worker's Union Party"
+ ENG_lb_party:0 "Whigs"
+ ENG_lb_party_long:0 "Whig Party"
+ ENG_cn_party:0 "Tories"
+ ENG_cn_party_long:0 "Conservative Party"
+ ENG_an_party:0 "Tory Radicals"
+ ENG_an_party_long:0 "Radical Faction of the Conservative Party"
+ ENG_rc_party:0 "NPP"
+ ENG_rc_party_long:0 "National People's Party"
+ ENG_ds_party:0 "NRF"
+ ENG_ds_party_long:0 "National Reorganization Front"
+ ENG_ni_party:0 "BIL"
+ ENG_ni_party_long:0 "British Imperial League"
+
+ GER_jc_party:0 "JPD"
+ GER_jc_party_long:0 "Jakobinistische Partei Deutschlands"
+ GER_ss_party:0 "SDP"
+ GER_ss_party_long:0 "Sozialdemokratische Partei Deutschlands"
+ GER_lb_party:0 "Zentrum"
+ GER_lb_party_long:0 "Zentrum"
+ GER_cn_party:0 "NP"
+ GER_cn_party_long:0 "Nationalliberale Partei"
+ GER_an_party:0 "NP"
+ GER_an_party_long:0 "Nationalliberale Partei"
+ GER_rc_party:0 "DA"
+ GER_rc_party_long:0 "Deutsche Arbeiterpartei"
+ GER_ds_party:0 "DV"
+ GER_ds_party_long:0 "Deutsche Vaterlandspartei"
+ GER_ni_party:0 "DV"
+ GER_ni_party_long:0 "Deutsche Vaterlandspartei"
+
  ############
  # POLITICAL PARTY TEMPLATE 
  ############
  # REMOVE HASHES PRIOR TO USE
  ############
- # x_authsoc_party:0 
- # x_authsoc_party_long:0
- # x_socialist_party:0 
- # x_socialist_party_long:0
- # x_social_democrat_party:0
- # x_social_democrat_party_long:0
- # x_social_liberal_party:0
- # x_social_liberal_party_long:0
- # x_conservative_party:0
- # x_conservative_party_long:0
- # x_authoritarianism_party:0 
- # x_authoritarianism_party_long:0
- # x_monarchism_party:0
- # x_monarchism_party_long:0 
- # x_ultranationalism_party:0
- # x_ultranationalism_party_long:0
+ # x_jc_party:0 
+ # x_jc_party_long:0
+ # x_ss_party:0 
+ # x_ss_party_long:0
+ # x_lb_party:0
+ # x_lb_party_long:0
+ # x_cn_party:0
+ # x_cn_party_long:0
+ # x_rc_party:0
+ # x_rc_party_long:0
+ # x_an_party:0
+ # x_an_party_long:0
+ # x_ds_party:0 
+ # x_ds_party_long:0
+ # x_ni_party:0
+ # x_ni_party_long:0
