fixed some Portuguese loc mistakes

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -202,20 +202,20 @@
 
  POR_ni:0 "Greater Portugal"
  POR_ni_DEF:0 "Greater Portugal"
- POR_ds:0 "Greater Portugal"
- POR_ds_DEF:0 "Greater Portugal"
- POR_rc:0 "Greater Portugal"
- POR_rc_DEF:0 "Greater Portugal"
- POR_an:0 "Greater Portugal "
- POR_an_DEF:0 "Greater Portugal"
- POR_cn:0 "Greater Portugal"
- POR_cn_DEF:0 "Greater Portugal"
- POR_lb:0 "Greater Portugal"
- POR_lb_DEF:0 "Greater Portugal"
- POR_ss:0 "Greater Portugal"
- POR_ss_DEF:0 "Greater Portugal"
- POR_jc:0 "Republic of Portugal"
- POR_jc_DEF:0 "Republic of Portugal"
+ POR_ds:0 "Kingdom of Portugal"
+ POR_ds_DEF:0 "Kingdom of Portugal"
+ POR_rc:0 "Kingdom of Portugal"
+ POR_rc_DEF:0 "Kingdom of Portugal"
+ POR_an:0 "Kingdom of Portugal"
+ POR_an_DEF:0 "Kingdom of Portugal"
+ POR_cn:0 "Kingdom of Portugal"
+ POR_cn_DEF:0 "Kingdom of Portugal"
+ POR_lb:0 "Portguese Republic"
+ POR_lb_DEF:0 "Portguese Republic"
+ POR_ss:0 "Kingdom of Portugal"
+ POR_ss_DEF:0 "Kingdom of Portugal"
+ POR_jc:0 "Portguese Republic"
+ POR_jc_DEF:0 "Portguese Republic"
  POR_ni_ADJ:0 "Portuguese"
  POR_rc_ADJ:0 "Portuguese"
  POR_lb_ADJ:0 "Portuguese"
