Portuguese focus tree, country description and icons

--- a/localisation/PB_Portugal_l_english.yml
+++ b/localisation/PB_Portugal_l_english.yml
@@ -36,3 +36,48 @@
   ##########################
   # MINISTERS
   ##########################
+
+
+
+
+  ##########################
+  # FOCUSSES
+  ##########################
+ POR_cut_british_trade:0 "Cut British Economic Ties"
+ POR_seek_new_trade_partners:0 "Partners in Trade"
+ POR_german_partners:0 "Mission to Berlin"
+ POR_french_partners:0 "Mission to Paris"
+ POR_end_protectionism:0 "Crush Protectionism"
+ POR_reinforce_food_rations:0 "Spend Money to Earn Money"
+ POR_calm_the_public:0 "The Fault in our Plan"
+ POR_salazar_reforms:0 "Call in Salazar"
+ POR_seek_foreign_loans:0 "Take out a Loan"
+ POR_enforce_austerity:0 "Enforce Austerity Measures"
+ POR_improve_portuguese_infrastructure:0 "Railways, Por Favor"
+ POR_let_franco_steer_the_nation:0 "Franco Holds the Steering Wheel "
+ POR_expansive_industrial_plan:0 "Industrialization Planning"
+ POR_support_traditional_farmers:0 "Subsidize Farming Ventures"
+ POR_joint_economic_recovery_plan:0 "Joint Economic Recovery"
+ POR_establish_higher_tariffs:0 "Establish High Tariffs"
+ POR_stimulate_national_industry:0 "Stimulate the Economy"
+ POR_shield_our_vulnerable_industry:0 "Protect our Young Industry"
+ POR_new_industries_bill:0 "New Industries Bill"
+ POR_protectionist_coalition:0 "Political Support for Protectionism"
+ POR_balance_the_budget:0 "Balanced Budget"
+ POR_agrarian_autarky:0 "Only Portuguese Wheat"
+ POR_reform_secondary_education:0 "Secondary Education Reform"
+ POR_exploit_colonies:0 "Adventure Colonial"
+ POR_expand_colonial_fortifications:0 "Expand Colonial Garrisons"
+ POR_control_our_industry:0 "Nominal Industrial Control"
+ POR_portuguese_economic_miracle:0 "End of the Term: Portuguesé"
+ POR_portuguese_economic_miracle_desc:0 "For a considerable amount of time, the political elite of the world has been coining the term 'Portguesé' to describe an absolute low in national welfare, mocking the Portuguese situation of the 1920s and 30s, when Portugal was the poorest nation in Europe. However, with Salazar's new economic plan, Portugal has finally experienced a small economic miracle."
+ POR_expand_lisbon_industry:0 "Extensive Lisbon Investments"
+ POR_pride_of_portugal:0 "Pride of Portugal"
+ POR_more_power_for_economic_minister:0 "The Financial Dictate"
+ POR_expand_naval_dockyards:0 "Return to Naval Glory"
+
+
+  ##########################
+  # FOCUSSES
+  ##########################
+  POR_Country_Desc_Topbar:0 "§YThe Kingdom of Portugal§! is a secondary power in Europe in 1933.\n\nThe Empire of Portugal ended with the Brazilian war of Independence, as any relevance Portugal had was lost after losing its primary colony of Brazil. The empire went into an economic decline, quickly becoming one of the poorest countries in Europe. During the Great War, Portugal was scared to get entangled into the web of conflict stretched across Europe. However, British pressure and the threat of Spanish dominance forced Portugal into the Great War, becoming the main front of the §YIberian campaign§! that claimed so many innocent, young lives in the grinding machine of war. \n\nPortuguese troops were able to break the Spanish front in 1908, eventually leading to Spain capitulating on the 7th of may, 1910, sparking §Ythe Spanish Civil War§! with the Portguese troops stuck in the middle of it. Portuguese troops had to quickly redeploy to Galicia and the Portuguese-Spanish border, but not before several more young men were taken in front of our very own eyes. \n\nThe end of the Great War would see Portugal returning to its economic instability and colonial ventures, holding onto our relationship with Britain. However, Manuel II had started to create political enemies, such as §YThe Portuguese Republican Party§! and its paramilitary wing §YThe Liberated Youth§!: While enjoying popular support, the Republican Party itself is divided to its core ideologically, based upon a jacobin-liberal split. Only if Portugal would actively be in an international or national crisis, would the Republican party have a chance of challenging Manuel's reign. Still, Portugal's political landscape has been marked with the blood of politicians and monarchs for decades. What could stop that from happening under Manuel II? \n\nThe §YKingdom of Portugal§! is a §Ysecondary power§!"
