Working UK Parliament and Australie

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -216,10 +216,39 @@
   PB_ENG_Overconfident_Staff_desc:0 "Britain’s military has become increasingly edified in their doctrines and standards, leading to a military uninterested in reform."
   PB_ENG_Imperial_Confederation_Head:0 "Head of the §YBritish Imperial Confederation§!"
   PB_ENG_Imperial_Confederation_Head_desc:0 "The United Kingdom is the current center of the British Imperial Confederation. The Imperial Parliament, located in London, is attended by all Constituent Commonwealths and Dominions of the British Empire. All Commonwealth nations are granted the right to elect Ministers of Imperial Parliament (MIPs) to represent them in inter-empire affairs. Though once a shining example of imperial cooperation, the Confederation has become increasingly ineffective at actually rectifying the Empire's myriad of problems. \n\n Hampered by bureacracy and the increasing assertiveness of the American Commonwealth, the Confederation is seen by many as an archaic relic of 19th century imperial policy."
+  PB_ENG_Parliament_Compromises:0 "Parliamentary Compromises"
+  PB_ENG_Opposition_Enforced_Concessions:0 "Opposition Enforced Concessions"
 
   ##########################
   # PARLIAMENT MECHANICS
   ##########################
-  USA_congress:0 "The House of Commons"
-  USA_congress_desc:0 "The House of Commons is the primary governmental organ of His Majesty's Government. Made up of 632 MPs elected from throughout the nation to propose and vote on important bills. The ruling party must maintain at least §Y50%§! support in the House of Commons to pass legislation. If the Opposition's support grows above §Y50%§!, it will significantly limit the party's ability to pass legislation and potentially spur a No Confidence Vote if §YOpposition Support§! grows too high"
+  PB_ENG_Parliament:0 "The House of Commons"
+  PB_ENG_Parliament_desc:0 "The House of Commons is the primary governmental organ of His Majesty's Government. Made up of 632 MPs elected from throughout the nation to propose and vote on important bills. The ruling party must maintain at least §Y50%§! support in the House of Commons to pass legislation. If the Opposition's support grows above §Y50%§!, it will significantly limit the party's ability to pass legislation and potentially spur a No Confidence Vote if §YOpposition Support§! grows too high"
   PB_Britain_Parliament_Opposition_Support_Amount:0 "Opposition Support is at §G[?ENG.opposition_support]%§!"
+  ENG_Parliament_Opposition_Support_Low:0 "Opposition Support is at §G[?ENG.opposition_support]%§!"
+  ENG_Parliament_Opposition_Support_Medium:0 "Opposition Support is at §Y[?ENG.opposition_support]%§!"
+  ENG_Parliament_Opposition_Support_High:0 "Opposition Support is at §R[?ENG.opposition_support]%§!"
+  ENG_Parliament_Suspended:0 "Parliament has been §RSuspended§!"
+  PB_ENG_Parliament_Suspended_Tooltip:0 "Parliament has §Rnot§! been suspended"
+  ENG_Lobbying_Effort:0 "Lobby for Support"
+  ENG_Major_Lobbying_Effort:0 "Major Lobbying Effort"
+  ENG_Make_Compromises:0 "Make some Compromises"
+  ENG_Opposition_Demands_Concessions:0 "Opposition demands Concessions"
+  opposition_support_increase_five_tt:0 "Opposition Support will §Rincrease§! by §G5%§!"
+  opposition_support_increase_ten_tt:0 "Opposition Support will §Rincrease§! by §G10%§!"
+  opposition_support_increase_twenty_tt:0 "Opposition Support will §Rincrease§! by §G20%§!"
+  opposition_support_decrease_five_tt:0 "Opposition Support will §Gdecrease§! by §G5%§!"
+  opposition_support_decrease_ten_tt:0 "Opposition Support will §Gdecrease§! by §G10%§!"
+  opposition_support_decrease_twenty_tt:0 "Opposition Support will §Gdecrease§! by §G20%§!"
+
+  ##########################
+  # EVENTS
+  ##########################
+  britain.1.t:0 "The End of an Era"
+  britain.1.d:0 ""
+  britain.1.a:0 "The King is dead. Long Live the King."
+
+  ##########################
+  # EVENTS
+  ##########################
+  ENG_Edward_VIII_Desc:0 "His Majesty, King-Emperor Edward VIII has arisen to the crown with the death of his father, King George V. Edward has long lived in the shadow of his father, whom has been regarded as one of the most successful monarchs to reign over the empire in recent memory. He finds himself reigning over a troubled nation, and an even more troubled empire. Noted for his open distaste for the rising popularity of the Worker's Union party, many leftists now fear that Edward might abandon his political neutrality as King to interfere in politics. Amidst economic and political uncertainty, Edward's rise to power and lack of concern for constitutional processes has done little to ease the government's concerns."
