--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3125,6 +3125,31 @@
  ICA_cn_ADJ:0 "Irish"
  ICA_an_ADJ:0 "Irish"
 
+ FST_ni:0 "Australie"
+ FST_ni_DEF:0 "Australie"
+ FST_ds:0 "Australie"
+ FST_ds_DEF:0 "Australie"
+ FST_rc:0 "Australie"
+ FST_rc_DEF:0 "Australie"
+ FST_an:0 "Australie"
+ FST_an_DEF:0 "Australie"
+ FST_cn:0 "Australie"
+ FST_cn_DEF:0 "Australie"
+ FST_lb:0 "Australie"
+ FST_lb_DEF:0 "Australie"
+ FST_ss:0 "Australie"
+ FST_ss_DEF:0 "Australie"
+ FST_jc:0 "Australie"
+ FST_jc_DEF:0 "Australie"
+ FST_ni_ADJ:0 "Australo-French"
+ FST_rc_ADJ:0 "Australo-French"
+ FST_lb_ADJ:0 "Australo-French"
+ FST_ss_ADJ:0 "Australo-French"
+ FST_jc_ADJ:0 "Australo-French"
+ FST_ds_ADJ:0 "Australo-French"
+ FST_cn_ADJ:0 "Australo-French"
+ FST_an_ADJ:0 "Australo-French"
+
 ###################################
 # TEMPLATE
 ###################################
