Australian map changes

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -515,11 +515,11 @@
  STATE_514:0 "Algerian Desert"
  STATE_515:0 "Nigerien Desert"
  STATE_516:0 "Northwest Siberia"
- STATE_517:0 "Hugh-Capet-Terre"
- STATE_518:0 "Tasmania"
- STATE_519:0 "Southern Australia"
+ STATE_517:0 "Nouvelle-Occitanie"
+ STATE_518:0 "Van Diemensland"
+ STATE_519:0 "Nuytsland"
  STATE_520:0 "Northern Australia"
- STATE_521:0 "Charlemagne-Terre"
+ STATE_521:0 "Victoria"
  STATE_522:0 "Western Australia"
  STATE_523:1 "Papua"
  STATE_524:0 "Taiwan"
@@ -787,9 +787,9 @@
  STATE_786:0 "Mauritanian Desert"
  STATE_787:0 "Northern Kashmir"
  STATE_788:0 "Wallonie Du Sud"
- STATE_789:0 "Sydney"
+ STATE_789:0 "Australien Desert"
  STATE_790:0 "Capricorn"
- STATE_791:0 "Cape York"
+ STATE_791:0 "Neu-Schlesien"
  STATE_792:0 "Darling"
  STATE_793:0 "Aleutian Islands"
  STATE_794:0 "Lika"
@@ -823,3 +823,4 @@
  STATE_822:0 "Canakkale"
  STATE_823:0 "Aydin"
  STATE_824:0 "Danish Antilles"
+ STATE_826:0 "Port-Philippe"
