--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -310,14 +310,14 @@
  VICTORY_POINTS_12268:0 "Palembang"
  VICTORY_POINTS_12371:0 "Hollandia"
  VICTORY_POINTS_7859:0 "Canberre"
- VICTORY_POINTS_7798:0 "Beaufort"
+ VICTORY_POINTS_7798:0 "Dutigalle"
  VICTORY_POINTS_12406:0 "Sydney"
- VICTORY_POINTS_1652:0 "Uden"
+ VICTORY_POINTS_1652:0 "Boltsholm"
  VICTORY_POINTS_7520:0 "Montalembert"
  VICTORY_POINTS_7564:0 "Grasse"
  VICTORY_POINTS_7566:0 "Lointaneville"
  VICTORY_POINTS_7669:0 "Heutsz"
- VICTORY_POINTS_12910:0 "Fournier"
+ VICTORY_POINTS_12910:0 "Klemzig"
  VICTORY_POINTS_1814:0 "Te Whanganui-a-Tara"
  VICTORY_POINTS_2197:0 "Christchurch"
  VICTORY_POINTS_2211:0 "Dunedin"
@@ -507,7 +507,7 @@
  VICTORY_POINTS_1751:0 "Azores"
  VICTORY_POINTS_2038:0 "Freetown"
  VICTORY_POINTS_2045:0 "Tianshui"
- VICTORY_POINTS_2189:0 "Hobart"
+ VICTORY_POINTS_2189:0 "Recherche"
  VICTORY_POINTS_2196:0 "Dar es Salaam"
  VICTORY_POINTS_3456:0 "Karachi"
  VICTORY_POINTS_3501:0 "Dover"
